--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: python
+python:
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.5-dev"
+  - "3.6"
+  - "3.6-dev"
+  - "3.7-dev"
 install:
   - pip install sspipe
   - pip install -r requirements.dev.txt
