Fix travis build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.6-dev"
   - "3.7-dev"
 install:
-  - pip install sspipe
+  - pip install .
   - pip install -r requirements.dev.txt
 script:
   - pytest
