--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -2,6 +2,6 @@ twine>=1.11.0
 setuptools>=40.0.0
 wheel>=0.31.1
 pip>=9.0.1
-pandas>=0.23.1; python_version < '3.9'  # TODO: remove when pandas support python 3.9
+pandas>=0.23.1
 pytest>=5.3.5
 pytest-timeout>=1.3.0
