--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 shared: &shared
   steps:
     - checkout
@@ -24,3 +24,10 @@ jobs:
     docker:
       - image: circleci/python:3.9
 
+workflows:
+  test:
+    jobs:
+      - py36
+      - py37
+      - py38
+      - py39
